[package]
name = "eth_block_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"  # Check for the latest version suitable for your needs
mongodb = "2.0.0"  # Ensure compatibility with your MongoDB server version
tokio = { version = "1", features = ["full"] }  # Async runtime, needed for ethers and MongoDB

